Try to fix gif loading indicator flicker

--- a/src/components/gifs.css
+++ b/src/components/gifs.css
@@ -1,73 +1,3 @@
-/* .interactive-gif .placeholder {
-  cursor: default;
-  opacity: 0.5;
-  text-align: center;
-}
-
-.interactive-gif .placeholder img {
-  height: 150px;
-}
-
-.interactive-gif .gif-container,
-.interactive-gif .still-container {
-  position: relative;
-  cursor: pointer;
-  line-height: 0;
-  font-size: 0;
-}
-
-.interactive-gif .gif-container .gif {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
-
-.interactive-gif .still-container .still {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  filter: saturate(.5);
-}
-
-.interactive-gif .still-container .play {
-  filter: grayscale(100%);
-  width: 20%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
-
-.interactive-gif .caption {
-  font-size: 90%;
-  font-style: italic;
-}
-
-
-.grayscale {
-  filter: grayscale(1);
-}
-
-.interactive-gif {
-  position: relative;
-}
-
-.loading {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
-
-.loading .indicator {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-} */
 .interactive-gif {
   position: relative;
 }
@@ -76,6 +6,8 @@
   position: absolute;
   height: 100%;
   width: 100%;
+  transition-delay: 1s;
+  transition-property: display;
 }
 
 .interactive-gif .loading .indicator {
@@ -135,4 +67,26 @@
 .interactive-gif .caption {
   font-size: 90%;
   font-style: italic;
+}
+
+
+
+.loading {}
+
+@keyframes timeout {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.interactive-gif .loading .indicator {
+  animation: timeout 5s infinite;
 }
